# systemstat

./: .cirrus.yml  .gitignore  .woodpecker.yml  Cargo.toml  Overview.org  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
examples/: info.rs
src/: data.rs  lib.rs
src/platform/: bsd.rs  common.rs  freebsd.rs  illumos.rs  linux.rs  macos.rs  mod.rs  netbsd.rs  openbsd.rs  unix.rs  windows.rs
src/platform/windows/: disk.rs  mod.rs  network.rs  network_interfaces.rs  socket.rs
