[package]
name = "systemstat"
version = "0.1.5"
authors = [ "unrelentingtech <hello@unrelenting.technology>" ]
keywords = [ "System", "Info" ]
description = "systemstat"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/systemstat"
repository = "https://github.com/myfreeweb/systemstat"

[dependencies]
time = "0.1"
chrono = "0.4"
lazy_static = "1.0"
bytesize = "1.0"
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nom = "6.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "sysinfoapi", "minwindef", "winbase", "winerror", "ws2def", "ws2ipdef", "pdh"]

[package.metadata.docs.rs]
targets = [
	"x86_64-unknown-freebsd",
	"x86_64-unknown-openbsd",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc"
]
