[package]
name = "systemstat"
version = "0.1.7"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Info" ]
description = "systemstat"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/systemstat"
repository = "https://github.com/myfreeweb/systemstat"

[dependencies]
time = "0.1"
chrono = {version = "0.4.19", features = ["serde"] }
lazy_static = "1.0"
bytesize = { version = "1.0.1", features = ["serde"] }
libc = "0.2"
serde = {version = "1.0.126", features = ["derive"] }



[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nom = "6.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "sysinfoapi", "minwindef", "winbase", "winerror", "ws2def", "ws2ipdef", "pdh"]

[package.metadata.docs.rs]
targets = [
	"x86_64-unknown-freebsd",
	"x86_64-unknown-openbsd",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc"
]
