[package]
name = "systemstat"
version = "0.1.9"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Info" ]
description = "systemstat"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/unrelentingtech/systemstat"
repository = "https://github.com/unrelentingtech/systemstat"

[dependencies]
chrono = { version = "0.4", features = ["clock"], default-features = false }
lazy_static = "1.0"
bytesize = "1.0"
libc = "0.2"
serde-feature-hack = { version = "0.2.0", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nom = "7.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "sysinfoapi", "minwindef", "winbase", "winerror", "ws2def", "ws2ipdef", "pdh"]

[package.metadata.docs.rs]
targets = [
	"x86_64-unknown-freebsd",
	"x86_64-unknown-openbsd",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc"
]

[features]
serde = ["serde-feature-hack", "bytesize/serde", "chrono/serde"]
